--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -197,11 +197,14 @@ label {
     flex-direction: column;
     align-items: center;
     margin-bottom: 10%;
+    height: 100%;
 }
 
-/* .bottom-screen {
-    background-color: white;
-} */
+.bottom-screen {
+    display: flex;
+    justify-content: flex-start;
+    /* background-color: white; */
+}
 
 li {
     color: var(--red-orange)
